halyard-bom-install/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: spinnaker.testk8s.com
    http:
     paths:
     - path: /
       backend:
          serviceName: spin-deck
          servicePort: 9000
  - host: spin-gate.testk8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: spin-gate
          servicePort: 8084
